Mousewheel-support: Use smaller scroll-steps

Use only 1/4 of the scrollbar-page-size when the mousewheel
is used.

BUG: 284646
FIXED-IN: 4.8.0